<resources>
    <string name="app_name">熊猫文旅通</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="nfc_read_card_wait_alert">打开手机NFC功能\n将卡片贴于手机背面NFC感应区\n（若卡片无反应，移动卡片寻找NFC感应区）</string>
    <string name="fragment_bycar_text_num">卡号 ：</string>
    <string name="fragment_bycar_text_money">当前充值卡号 ：</string>
    <string name="nfcact_title_realpaymoney_othermoney"> 其他金额 </string>
    <string name="nfcact_title_realpaymoney"> 实付金额  ： </string>
    <string name="nfcact_title_realpaymoney_commit"> 立即充值 </string>
    <string name="nfcact_title_fapiao">发票信息 |</string>
    <string name="nfcact_title_tishi"> 温馨提示 |</string>
    <string name="moredispose_text_hist">充值记录</string>
    <string name="moredispose_backtoact">返回首页</string>

    <string name="login_wx_querycode">获取验证码</string>
    <string name="login_wx_editokphone">输入错误,请重试</string>


    <string name="eidactivity_shiming1">添加证件</string>
    <string name="eidactivity_shiming2">○ 请准备好身份证、熊猫卡</string>
    <string name="eidactivity_shiming3">○ 以及具备NFC功能的手机</string>
    <string name="eidactivity_sadd">添加</string>
    <string name="eidactivity_eidreg">卡片激活</string>
    <string name="eidactivity_eidname">数字身份</string>
    <string name="eidactivity_shimingshenfen">○ 您的熊猫卡将嵌入eID数字身份，实现实名认证。</string>
    <string name="eidactivity_iagrees">我同意</string>
    <string name="eidactivity_pandacardname">熊猫文旅通卡</string>
    <string name="eidactivity_iagrees2">《eID用户协议》</string>


    <string name="eidactivity_bindphone">手机:  </string>
    <string name="eidactivity_yue">余额:  </string>
    <string name="eidactivity_bindcard">卡号:  </string>
    <string name="eidactivity_msgok">信息确认</string>
    <string name="eidactivity_msgfa">信息错误</string>


    <string name="eidactivity_cardinfo">订单信息</string>
    <string name="eidactivity_cardstatus">卡片列表</string>
    <string name="eidactivity_cardtype">订单号码： </string>
    <string name="eidactivity_cardpay">消费： </string>
    <string name="eidactivity_changedefault">默认</string>
    <string name="eidactivity_cardnum">卡号： </string>
    <string name="eidactivity_yquancun">已圈存 </string>
    <string name="eidactivity_nquancun">未圈存 </string>
    <string name="eidactivity_quancun">圈存状态： </string>

    <string name="eidactivity_nodate">暂无数据</string>


    <string name="cardactive_title_eidact">添加卡片</string>
    <string name="cardactive_idxcrad_read">请将您的身份证置于手机背面</string>
    <string name="cardactive_idxcrad_read2">请将身份证靠进手机所示识别</string>
    <string name="cardactive_idxcrad_read3">识别过程中请勿离开身份证</string>
    <string name="cardactive_idxcrad_start">读取中，请勿移动</string>
    <string name="cardactive_idxcrad_failed">读取失败</string>
    <string name="cardactive_idxcrad_ok">读取成功</string>
    <string name="cardactive_nextin">正在取卡</string>
    <string name="cardactive_nextstep">下一步</string>
     <string name="cardactive_idcardreadover">请贴熊猫卡......</string>
    <string name="cardactive_idcardreadover2">请将熊猫卡靠近进手机所示识别</string>
    <string name="cardactive_idcardreadover3">识别过程中请勿离开熊猫卡</string>
    <string name="cardactive_idcardreadover4">请输入卡片上图层后的校验码</string>
    <string name="cardactive_idcardreadover5">校验码</string>
    <string name="cardactive_idcardreadover6">确认校验码</string>
    <string name="cardactive_faceover">人脸识别成功</string>
    <string name="cardactive_infinding">正在识别人脸</string>
    <string name="cardactive_startread1">读取身份证1/3</string>
    <string name="cardactive_startread2">人证活体识别中2/3</string>
    <string name="cardactive_startread3">识别熊猫卡3/3</string>
    <string name="cardactive_startread4">信息确认</string>
    <string name="cardactive_jihuoend">激活完成</string>
    <string name="cardactive_showmycard">查看我的熊猫卡</string>


    <string name="cardactive_cardsisbind">已绑卡</string>
    <string name="cardactive_cardsnotbind">未绑卡</string>

    <string name="login_phonenum">手机号</string>
    <string name="login_wx_nextstep">保存</string>
    <string name="regist_writesecuritycode">验证码</string>
    <string name="regist_getwritesecuritycode">获取验证码</string>
</resources>
