<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".uis.ShuangYSaveMoneyActivity"
    tools:ignore="MissingConstraints">

    <RelativeLayout
        android:id="@+id/zjjrelay_recharge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_gif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="50px"
                android:src="@mipmap/gif_nfc_read_wiat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nfc_read_card_wait_alert"
                android:textColor="@color/alert_text_color" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/zjjrely_nfc_bottomlly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/zjjlly_writeview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/nfc_bottomlly"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/zjjlly_writecardnum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="1626627323665"
                        android:textColor="#262626"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fragment_bycar_text_money"
                        android:textColor="#999999"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="#f5f5f5"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp"
                        android:gravity="center_vertical"
                        android:text="@string/eidactivity_yue"
                        android:textColor="#666666"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/zjjlly_writecmomey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="0"
                        android:textColor="#D53529"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


            <GridView
                android:id="@+id/zjjmoney_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <Button
                    android:id="@+id/zjjnfc_btnsaveothermoney"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/nfcact_grid_item_boxframe"
                    android:text="@string/nfcact_title_realpaymoney_othermoney"
                    android:textColor="#093B92"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:id="@+id/zjjnfc_paymoney_bottomlly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/zjjnfc_saveothermoney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:background="@null"
                        android:gravity="bottom"
                        android:hint=""
                        android:inputType="number"
                        android:text=""
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="#093B92" />

                </RelativeLayout>

                <Button
                    android:id="@+id/zjjpaymoney_bottomlly3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/nfcact_grid_item_boxframe"
                    android:padding="10dp"
                    android:text="@string/nfcact_title_realpaymoney_commit"
                    android:textColor="#093B92"
                    android:textSize="14sp"
                    android:visibility="gone" />


            </LinearLayout>
            <Button
                android:id="@+id/refund"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="退款" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nfc_bottomlly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nfcact_title_fapiao"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nfcact_title_tishi"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moredispose_text_hist"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/payquery"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="必须执行平台参数同步" />

    <Button
        android:id="@+id/quancun"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="查询是否开卡" />



    <Button
        android:id="@+id/createoeder"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="创建订单" />

    <Button
        android:id="@+id/savem"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="支付订单" />

    <Button
        android:id="@+id/payandquery"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="支付后查询" />

    <Button
        android:id="@+id/getMac2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="充值申请" />
<!--    <Button-->
<!--        android:id="@+id/tuikuan"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="70dp"-->
<!--        android:text="退款" />-->
    <Button
        android:id="@+id/kaika"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="开卡" />

</LinearLayout>